--- a/features/list/src/main/res/menu/navigation_menu.xml
+++ b/features/list/src/main/res/menu/navigation_menu.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/refresh"
+        android:enabled="true"
+        android:icon="@drawable/ic_autorenew_black_24dp"
+        android:title="@string/refresh"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/favorites"
         android:enabled="true"
         android:icon="@drawable/ic_star"
