--- a/features/list/src/main/res/menu/options_menu.xml
+++ b/features/list/src/main/res/menu/options_menu.xml
@@ -7,4 +7,8 @@
         android:title="@string/search"
         app:actionViewClass="android.widget.SearchView"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/menu_refresh"
+        android:title="@string/menu_refresh"
+        app:showAsAction="never" />
 </menu>
