--- a/features/detail/src/main/res/menu/detail_menu.xml
+++ b/features/detail/src/main/res/menu/detail_menu.xml
@@ -6,5 +6,6 @@
         android:id="@+id/star"
         android:icon="@drawable/ic_star"
         app:showAsAction="always"
+        android:checked="false"
         android:title="@string/favorite" />
 </menu>
