--- a/features/list/src/main/res/layout/fragment_list.xml
+++ b/features/list/src/main/res/layout/fragment_list.xml
@@ -20,12 +20,30 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center" />
 
-        <TextView
-            android:id="@+id/errorText"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/errorContainer"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/data_loading_error" />
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/errorText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/data_loading_error" />
+
+            <Button
+                android:id="@+id/reloadButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_gravity="center"
+                android:textColor="@color/colorAccent"
+                android:text="@string/reload_button_text"
+                />
+        </LinearLayout>
+
     </ViewAnimator>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
