--- a/features/detail/src/main/res/menu/detail_menu.xml
+++ b/features/detail/src/main/res/menu/detail_menu.xml
@@ -3,8 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/star"
+        android:id="@+id/to_favorite"
         android:icon="@drawable/ic_star"
-        app:showAsAction="always"
-        android:title="@string/favorite" />
+        android:title="@string/favorite"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/favorited"
+        android:icon="@drawable/ic_star_filled"
+        android:title="@string/favorite"
+        app:showAsAction="ifRoom" />
 </menu>
