--- a/features/list/src/main/res/menu/options_menu.xml
+++ b/features/list/src/main/res/menu/options_menu.xml
@@ -5,6 +5,12 @@
         android:id="@+id/search"
         android:icon="@drawable/ic_search"
         android:title="@string/search"
-        app:actionViewClass="android.widget.SearchView"
+        app:actionViewClass="com.vp.list.search.CustomSearchView"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/refresh"
+        android:icon="@drawable/ic_baseline_refresh_24"
+        android:title="@string/refresh"
         app:showAsAction="always" />
 </menu>
