--- a/features/list/src/main/res/layout/fragment_list.xml
+++ b/features/list/src/main/res/layout/fragment_list.xml
@@ -45,6 +45,13 @@
         </LinearLayout>
     </ViewAnimator>
 
+    <ProgressBar
+        android:id="@+id/pagingProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
+
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
