--- a/features/list/src/main/res/layout/fragment_list.xml
+++ b/features/list/src/main/res/layout/fragment_list.xml
@@ -12,7 +12,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+         />
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -20,12 +21,26 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center" />
 
-        <TextView
-            android:id="@+id/errorText"
+        <LinearLayout
+            android:id="@+id/errorContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/data_loading_error" />
+            android:orientation="vertical"
+            android:layout_gravity="center">
+            <TextView
+                android:id="@+id/errorText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/data_loading_error" />
+
+            <Button
+                android:id="@+id/refreshButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/refresh"/>
+        </LinearLayout>
     </ViewAnimator>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
