--- a/features/favorites/src/main/res/layout/activity_favorite.xml
+++ b/features/favorites/src/main/res/layout/activity_favorite.xml
@@ -4,6 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FavoriteActivity">
+    tools:context=".presentation.ui.FavoriteActivity">
+
+  <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/recyclerView"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
