--- a/features/favorites/src/main/res/layout/favorite_list_item.xml
+++ b/features/favorites/src/main/res/layout/favorite_list_item.xml
@@ -1,32 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?selectableItemBackground">
 
   <ImageView
-      android:id="@+id/favoriteImage"
-      android:layout_width="80dp"
-      android:layout_height="80dp"
-      android:scaleType="centerCrop"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      tools:src="@tools:sample/backgrounds/scenic" />
-
-  <TextView
-      android:id="@+id/favoriteTitle"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:textSize="16sp"
-      android:textStyle="bold"
-      android:lines="2"
-      android:ellipsize="end"
-      tools:text = "Nombre"
-      android:layout_marginStart="8dp"
-      app:layout_constraintStart_toEndOf="@+id/favoriteImage"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+      android:id="@+id/poster"
+      android:layout_width="200dp"
+      android:layout_height="300dp"
+      android:layout_gravity="center"
+      android:adjustViewBounds="true"
+      android:scaleType="fitCenter" />
+</FrameLayout>
